# llm-apps-with-langchain

./: .gitignore  README.md
1-news-summarizer/: README.md
1-news-summarizer/api/: .env.example  main.py  pyproject.toml
1-news-summarizer/api/core/: article_fetcher.py  chat_client.py  config.py  interfaces.py  models.py  openai.py  summarizer.py
1-news-summarizer/ui/: app.py  pyproject.toml
2-qa-chatbot/: README.md
2-qa-chatbot/api/: .env.example  _app.py  main.py  pyproject.toml
2-qa-chatbot/api/cli/: ingestion_pipeline_cli.py  qa_service_cli.py
2-qa-chatbot/api/core/: chat_client.py  config.py  vector_store.py
2-qa-chatbot/api/routes/: __init__.py  ingestion.py  models.py  qa.py
2-qa-chatbot/api/services/: document_ingestion.py  qa_service.py  run_ingestion_pipeline.py
2-qa-chatbot/ui/: README.md  app.py  client.py  pyproject.toml
3-document-search-engine/api/: main.py  middleware.py  pyproject.toml
3-document-search-engine/api/core/: chat_client.py  config.py  factory.py  interfaces.py  logger.py  models.py
projects/1-news-summarizer/api/: main.py
