[project]
name = "news-summarizer-api"
version = "0.1.0"
description = "A FastAPI application for summarizing news articles using LangChain and LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

# pyproject.toml
[tool.ruff]
select = ["I"]