[project]
name = "news-summarizer-api"
version = "0.1.0"
description = "A FastAPI application for summarizing news articles using LangChain and LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "loguru>=0.7.3",
    "lxml[html-clean]>=6.0.1",
    "newspaper3k>=0.2.8",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

# pyproject.toml
[tool.ruff]
select = ["I"]
