[project]
name = "document-semantic-search-engine-api"
description = "A document search engine API using FastAPI, LangChain and Milvus DB."
authors = [{ name = "Phani Atmakur" }]
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "structlog>=25.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = [".venv|venv|build|dist|__pycache__"]
